src/clusterfuzz/_internal/tests/core/crash_analysis/stack_parsing/stack_analyzer_data/golang_panic_runtime_error_slice_bounds_out_of_range.txt
panic: runtime error: slice bounds out of range [1:0]
goroutine 17 [running, locked to thread]:
encoding/json.(*decodeState).unquoteBytes(0x10c000096420, 0x10c00001c568, 0x1, 0x8, 0x0, 0x0, 0x0, 0x0)
 /src/go/src/encoding/json/decode.go:1264 +0xb3b
encoding/json.(*decodeState).literalStore(0x10c000096420, 0x10c00001c568, 0x1, 0x8, 0x9884a0, 0x10c00009c0f0, 0x182, 0x1, 0x9aafe0, 0x10c00009c000)
 /src/go/src/encoding/json/decode.go:1004 +0x23a5
encoding/json.(*decodeState).object(0x10c000096420, 0x982a80, 0x10c00009c000, 0x16, 0x10c000096448, 0x60337b)
 /src/go/src/encoding/json/decode.go:833 +0x152d
encoding/json.(*decodeState).value(0x10c000096420, 0x982a80, 0x10c00009c000, 0x16, 0x16, 0x22)
 /src/go/src/encoding/json/decode.go:446 +0xd3
encoding/json.(*decodeState).unmarshal(0x10c000096420, 0x982a80, 0x10c00009c000, 0x10c000096448, 0x0)
 /src/go/src/encoding/json/decode.go:179 +0x2d3
encoding/json.Unmarshal(0x6050000001d0, 0xa, 0xa, 0x982a80, 0x10c00009c000, 0x0, 0x0)
 /src/go/src/encoding/json/decode.go:106 +0x15c
github.com/dvyukov/go-fuzz-corpus/json.Fuzz(0x6050000001d0, 0xa, 0xa, 0x7ffe5d47fe28)
 /src/go/packages/src/github.com/dvyukov/go-fuzz-corpus/json/json.go:23 +0x156
main.LLVMFuzzerTestOneInput(0x6050000001d0, 0xa, 0x9b1ad0)
 github.com/dvyukov/go-fuzz-corpus/json/go.fuzz.main/main.go:35 +0x66
main._cgoexpwrap_e34c4d0cdb90_LLVMFuzzerTestOneInput(0x6050000001d0, 0xa, 0x2758b0)
 _cgo_gotypes.go:64 +0x37
AddressSanitizer:DEADLYSIGNAL
=================================================================
==1==ERROR: AddressSanitizer: ABRT on unknown address 0x000000000001 (pc 0x0000005c1a81 bp 0x10c0000bd628 sp 0x10c0000bd610 T0)
SCARINESS: 10 (signal)
    #0 0x5c1a80 in runtime.raise runtime/sys_linux_amd64.s:149
AddressSanitizer can not provide additional info.
SUMMARY: AddressSanitizer: ABRT (/mnt/scratch0/clusterfuzz/bot/builds/clusterfuzz-builds_golang_d17eb352b38c4d62fce2871b0afb04af926c5e25/revisions/fuzzer-json+0x5c1a80)
==1==ABORTING